<resources>
    <string name="app_name">Traqueur de Fitness</string>
    <string name="souligne_creer_compte"><u>Créer un compte</u></string>
    <string name="connexion">Connexion</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="confirmation_mot_de_passe">Confirmation de mot de passe :</string>
    <string name="creer_compte">Créer compte</string>
    <string name="nom_d_utilisateur"> Nom d\'utilisateur :</string>
    <string name="age">Votre âge :</string>
    <string name="sexe">Votre sexe :</string>
    <string name="taille">Votre taille :</string>
    <string name="cm">(en cm)</string>
    <string name="kg">(en Kg)</string>
    <string name="poids">Votre poids :</string>
    <string name="activite">Votre activité :</string>
    <string name="consulter">Consultation</string>
    <string name="calories">Votre besoin des calories par jour :</string>
    <string name="retour">Retour</string>
    <string name="imc">Votre IMC :</string>
    <string name="voir_nombre_de_pas_par_jour">voir nombre de pas par jour</string>
    <string name="voir_le_lien_github_de_ce_projet">Voir le lien github de ce projet</string>


</resources>