<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg1"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="333dp"
        android:layout_height="218dp"
        android:layout_gravity="center"
        android:src="@drawable/titre" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="  Nom d'utilisateur :"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="20dp"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/mdp"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnConnexion"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:background="@color/vert" />

    <Button
        android:id="@+id/btnCreation"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/baseline_arrow_forward_24"  android:text="@string/souligne_creer_compte"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp" />


</LinearLayout>
