<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg1"
    tools:context=".view.Result">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/calories"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/tvResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:padding="5dp"
        android:text="..."
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvIMC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imc"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/tvIMCreponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:padding="5dp"
        android:text="..."
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextConfirmPassword"
        android:layout_marginTop="200dp"
        android:background="@color/vert"
        android:text="@string/retour"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="ObsoleteLayoutParam" />




</LinearLayout>