<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg1"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="216dp"
        android:layout_height="139dp"
        android:layout_gravity="center"
        android:src="@drawable/bienvenue" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="  Nom d'utilisateur :"
        android:drawableLeft=""
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="20dp"
        android:hint="  Adresse e-mail :"
        android:drawableLeft="@drawable/baseline_email_24"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="20dp"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/mdp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/confirmation_mot_de_passe"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/mdp"
        android:padding="10dp" />


    <Button
        android:id="@+id/btnCreation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextConfirmPassword"
        android:layout_marginTop="70dp"
        android:background="@color/vert"
        android:text="@string/creer_compte"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>
